# cslibs_vision

./: .gitlab-ci.yml  CMakeLists.txt  README.md  package.xml
include/cslibs_vision/data/: directory_io.h  frame_buffer.h  matchable.h  painter.h  pose.h
include/cslibs_vision/features/: acf.hpp  gabor.hpp  gradient_histogram.hpp  hog.hpp  homogenity.hpp  lbp.hpp  ltp.hpp  magnitude.hpp  wld.hpp
include/cslibs_vision/textures/: hog.hpp  ltp.hpp
include/cslibs_vision/utils/: camera_calibration.h  cluster_boundaries.hpp  color_functions.hpp  extractor.h  flood.h  heatmap.hpp  histogram.hpp  hough_peak.h  kernel.hpp  log_odds.hpp  match_scorer_clustering.h  noise_filter.hpp  opencv_utils.hpp  perspective_transform.h  preemptiveSLIC.h  randomforest.h  stereo_parameters.hpp  undistortion.h
include/utils_vision/config/: config.h  configurated_tools.h  reconfigurable.h  types.h
include/utils_vision/data/: directory_io.h  frame_buffer.h  painter.h
include/utils_vision/textures/: homogenity.hpp  lbp.hpp  ltp.hpp  texture_descriptor.hpp  wld.hpp
include/utils_vision/utils/: camera_calibration.h  cluster_boundaries.hpp  color_functions.hpp  extractor.h  extractor_manager.h  flood.h  heatmap.hpp  histogram.hpp  hough_peak.h  kernel.hpp  lbp.h  local_patterns.h  local_patterns.hpp  log_odds.hpp  matcher.h  noise_filter.hpp  perspective_transform.h  preemptiveSLIC.h  randomforest.h  stereo_parameters.hpp  undistortion.h
src/common/: logger.cpp
src/config/: config.cpp  config.h  configurated_tools.cpp  reconfigurable.cpp  types.cpp
src/data/: angle.cpp  directory_io.cpp  frame.cpp  frame_buffer.cpp  frame_io.cpp  matchable.cpp  matchable_pose.cpp  painter.cpp  pose.cpp
src/tests/: dataset.yaml  pts_left.yaml  pts_right.yaml  stereo.yaml  stereo_calib.cpp  stereo_camera.yaml  test_stereo.cpp  test_stereo_image_seq.cpp  test_stereo_video.cpp
src/utils/: camera_calibration.cpp  extractor.cpp  extractor_manager.cpp  extractor_manager.h  extractors_default.cpp  flood.cpp  grusig_descriptor.cpp  hough_peak.cpp  lbp.cpp  match_scorer.cpp  match_scorer_clustering.cpp  match_scorer_factory.cpp  match_scorer_homography.cpp  match_scorer_reprojection.cpp  matcher.cpp  perspective_transform.cpp  preemptiveSLIC.cpp  randomforest.cpp  rectangle_cluster.cpp  undistortion.cpp
