<?xml version="1.0"?>
<package>
  <name>utils_vision</name>
  <version>0.0.1</version>
  <description>The utils_vision package</description>

  <maintainer email="sebastian.buck@uni-tuebingen.de">buck</maintainer>

  <license>BSD</license>
  <author email="sebastian.buck@uni-tuebingen.de">buck</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>cmake_modules</build_depend>

  <run_depend>cv_bridge</run_depend>
</package>
