<?xml version="1.0"?>
<package>
  <name>cslibs_vision</name>
  <version>1.0.0</version>
  <description>This package contains vision related classes</description>

  <maintainer email="sebastian.buck@uni-tuebingen.de">buck</maintainer>

  <license>BSD</license>
  <author email="sebastian.buck@uni-tuebingen.de">buck</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cv_bridge</build_depend>

  <run_depend>cv_bridge</run_depend>
</package>
