<?xml version="1.0"?>
<package>
  <name>cslibs_vision</name>
  <version>1.0.0</version>
  <description>This package contains vision related classes</description>

  <maintainer email="sebastian.buck@uni-tuebingen.de">buck</maintainer>
  <maintainer email="richard.hanten@uni-tuebingen.de">hanten</maintainer>

  <license>BSD</license>
  <author email="sebastian.buck@uni-tuebingen.de">buck</author>
  <author email="richard.hanten@uni-tuebingen.de">hanten</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>yaml-cpp</build_depend>

  <run_depend>cv_bridge</run_depend>
  <run_depend>yaml-cpp</run_depend>
</package>
